[gd_scene format=3 uid="uid://dnq0xn578aufp"]

[ext_resource type="Script" uid="uid://liq1cohcn3v3" path="res://scripts/player.gd" id="1_h2yge"]
[ext_resource type="Script" uid="uid://dnl3b8wb8c4n6" path="res://scripts/main.gd" id="1_lquwl"]
[ext_resource type="Texture2D" uid="uid://d0382v3o55ne4" path="res://art/icon.svg" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://bbcr0aoi4k638" path="res://scripts/enemy.gd" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://d367rmrn5jaha" path="res://art/monster-icon.svg" id="3_lquwl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dm0k"]
size = Vector2(1170, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig7tw"]
size = Vector2(39, 554)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(1179, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(33, 662)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(33, 76.35712)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mycd"]
size = Vector2(125.97938, 125.97938)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_272bh"]
radius = 11.782799

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
bg_color = Color(0.51901037, 0.2753131, 0.18870854, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_size = 2
shadow_offset = Vector2(0.5, 0.5)

[node name="Main" type="Node2D" unique_id=2073040118]
script = ExtResource("1_lquwl")

[node name="LevelBounds" type="StaticBody2D" parent="." unique_id=920720500]
collision_layer = 2
collision_mask = 0

[node name="NorthWall" type="CollisionShape2D" parent="LevelBounds" unique_id=1362638867]
position = Vector2(575, 0)
shape = SubResource("RectangleShape2D_7dm0k")

[node name="ColorRect" type="ColorRect" parent="LevelBounds/NorthWall" unique_id=2074730460]
offset_left = -583.99994
offset_top = -22.999998
offset_right = -543.99994
offset_bottom = 17.000002
scale = Vector2(29.231672, 0.98060346)
color = Color(0.5647059, 0.5647059, 0.91764706, 1)
metadata/_edit_use_anchors_ = true

[node name="WestWall" type="CollisionShape2D" parent="LevelBounds" unique_id=859965943]
position = Vector2(-1.5, 267)
shape = SubResource("RectangleShape2D_ig7tw")

[node name="ColorRect" type="ColorRect" parent="LevelBounds/WestWall" unique_id=1534386509]
offset_left = -20.5
offset_top = -274.0
offset_right = 19.5
offset_bottom = -234.0
scale = Vector2(1, 13.756757)
color = Color(0.5647059, 0.5647059, 0.91764706, 1)

[node name="SouthWall" type="CollisionShape2D" parent="LevelBounds" unique_id=483828131]
position = Vector2(570, 649)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="ColorRect" type="ColorRect" parent="LevelBounds/SouthWall" unique_id=1684673796]
offset_left = -589.99994
offset_top = -17.999998
offset_right = -549.99994
offset_bottom = 22.000002
scale = Vector2(29.59087, 0.9130435)
color = Color(0.5647059, 0.5647059, 0.91764706, 1)

[node name="EastWall" type="CollisionShape2D" parent="LevelBounds" unique_id=2089635616]
position = Vector2(1152, 323)
shape = SubResource("RectangleShape2D_h2yge")

[node name="ColorRect" type="ColorRect" parent="LevelBounds/EastWall" unique_id=1040447870]
offset_left = -18.0
offset_top = -333.0
offset_right = 22.0
offset_bottom = -293.0
scale = Vector2(0.8947368, 16.558823)
color = Color(0.5647059, 0.5647059, 0.91764706, 1)

[node name="Exit" type="Area2D" parent="." unique_id=1474929097]
position = Vector2(-20, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit" unique_id=1778383528]
position = Vector2(-7, 586.89514)
rotation = 3.1415927
scale = Vector2(1, 1.1290323)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="Player" type="CharacterBody2D" parent="." unique_id=997966807]
collision_mask = 6
script = ExtResource("1_h2yge")

[node name="Sprite2D" type="Sprite2D" parent="Player" unique_id=1003109136]
scale = Vector2(0.41276598, 0.41276598)
texture = ExtResource("2_1bvp3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" unique_id=124071543]
scale = Vector2(0.41276598, 0.41276598)
shape = SubResource("RectangleShape2D_7mycd")

[node name="Enemy" type="CharacterBody2D" parent="." unique_id=1000179205]
collision_layer = 4
collision_mask = 3
script = ExtResource("3_1bvp3")

[node name="Sprite2D" type="Sprite2D" parent="Enemy" unique_id=1852672072]
scale = Vector2(0.37812018, 0.37812018)
texture = ExtResource("3_lquwl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy" unique_id=1099525199]
scale = Vector2(1.6973896, 1.6973896)
shape = SubResource("CapsuleShape2D_272bh")

[node name="UI" type="CanvasLayer" parent="." unique_id=449926801]

[node name="CaughtScreen" type="Control" parent="UI" unique_id=538542996]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/CaughtScreen" unique_id=1200297558]
layout_mode = 0
offset_left = 489.0
offset_top = 188.0
offset_right = 529.0
offset_bottom = 228.0
scale = Vector2(6.09447, 6.09447)
color = Color(0.16565639, 0.16565639, 0.16565648, 0.6745098)

[node name="Label" type="Label" parent="UI/CaughtScreen" unique_id=1230501885]
layout_mode = 0
offset_left = 541.0
offset_top = 256.00003
offset_right = 669.0
offset_bottom = 301.00003
scale = Vector2(1.1527008, 1.1527008)
theme_override_font_sizes/font_size = 32
text = "Caught!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="UI/CaughtScreen" unique_id=113305421]
layout_mode = 0
offset_left = 572.0
offset_top = 358.0
offset_right = 653.0
offset_bottom = 389.0
theme_override_styles/normal = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/hover = SubResource("StyleBoxFlat_lquwl")
text = "Try Again"

[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
[connection signal="pressed" from="UI/CaughtScreen/Button" to="." method="_on_button_pressed"]
